-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.10.1
-
None
-
CentOS 7
-
3
-
9223372036854775807
The default lnet_routes.conf file provided by the lustre-client-2.10.1-1.el7.x86_64 RPM contains an example using an IP range syntax to specify multiple gateways, that doesn't seem to be supported by lnetctl:
tcp7: { gateway: 10.3.3.[6-12]@tcp, priority: 20, hop: 8 }
When feeding that example file to lustre_routes_config, the following error is generated:
# lustre_routes_config /etc/lnet_routes.conf
Can't parse gateway NID "10.3.3.[6-12]@tcp"
The easy fix would be to remove the example from the configuration file, but a much better one would be to make {lnetctl}} accept IP ranges.
The previous way of handling lnet configuration via kernel module options supported the syntax, so it appears like lnetctl not supporting it is a regression.